<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/layouts_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            android:textSize="20sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="@dimen/board"
        android:layout_height="@dimen/board"
        android:layout_below="@id/linear_layout"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layouts_margin"
        android:background="@drawable/board"
        android:columnCount="3"
        android:columnOrderPreserved="true"
        android:rowCount="3"
        android:id="@+id/grid_layout">

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/top_left"
            android:onClick="onImageClick"
            android:id="@+id/iv_00"/>

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/top_center"
            android:onClick="onImageClick"
            android:id="@+id/iv_01"/>

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/top_right"
            android:onClick="onImageClick"
            android:id="@+id/iv_02"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/center_left"
            android:onClick="onImageClick"
            android:id="@+id/iv_10"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/center_center"
            android:onClick="onImageClick"
            android:id="@+id/iv_11"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/center_right"
            android:onClick="onImageClick"
            android:id="@+id/iv_12"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/bottom_left"
            android:onClick="onImageClick"
            android:id="@+id/iv_20"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/bottom_center"
            android:onClick="onImageClick"
            android:id="@+id/iv_21"
            />

        <ImageView
            android:layout_width="@dimen/grid_item_width"
            android:layout_height="@dimen/gird_item_height"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="@dimen/grid_item_margin"
            android:contentDescription="@string/bottom_right"
            android:onClick="onImageClick"
            android:id="@+id/iv_22"
            />


    </GridLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:layout_margin="@dimen/layouts_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:layout_weight="6"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:onClick="onRestartClick"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:id="@+id/btn_restart"/>

    </LinearLayout>

</RelativeLayout>